exports[`test Signup renders 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation">
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}>
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}>
      <ul>
        <li>
          <a
            className="is-active is-current"
            href="/start"
            onClick={[Function]}>
            <span>
              Become a seller
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}>
            <span>
              Create your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}>
            <span>
              Business information
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/your-info"
            onClick={[Function]}>
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}>
            <span>
              Digital Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}>
            <span>
              Case Study
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}>
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}>
            <span>
              Review your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}>
            <span>
              Submit
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div>
      <h1>
        Joining the Marketplace
      </h1>
      <p>
        Before you can join the Marketplace we need to know more about your business.
      </p>
      <p>
        The information you share will be used to evaluate your business and build your seller profile.
      </p>
      <p>
        If your skills and experience meet the 
        <a
          href="/evaluation-criteria">
          evaluation criteria
        </a>
         you’ll be able to join our panel and be given a presence in the Marketplace. This means buyers can find you and you can respond to opportunities.
      </p>
      <h2>
        You’ll need
      </h2>
      <ul>
        <li>
          Case studies
        </li>
        <li>
          References
        </li>
        <li>
          Financial viability statement
        </li>
        <li>
          Proof of worker’s compensation insurance and public liability insurance
        </li>
      </ul>
      <p>
        This application takes about 
        <strong>
          30 minutes
        </strong>
         to complete.
      </p>
      <p>
        Your progress saves automatically, so you can continue later.
      </p>
      <p>
        <a
          href="#"
          onClick={[Function]}
          role="button">
          Start Now 
        </a>
      </p>
    </div>
  </article>
</div>
`;

exports[`test Signup renders empty Your Info form 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation">
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}>
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}>
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}>
            <span>
              Become a seller
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}>
            <span>
              Create your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}>
            <span>
              Business information
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}>
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}>
            <span>
              Digital Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}>
            <span>
              Case Study
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}>
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}>
            <span>
              Review your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}>
            <span>
              Submit
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div
      className="layout">
      <header>
        <h1
          tabIndex="-1">
          Business details
        </h1>
      </header>
      <article
        role="main">
        <form
          action={undefined}
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="representative">
              Authorised Representative
            </label>
            <p
              className="hint"
              id="representative-hint">
              This person must be authorised to enter into contracts on behalf of the business.
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              id="representative"
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_name">
              Additional contact (optional)
            </label>
            <p
              className="hint"
              id="contact_name-hint">
              You can nominate someone else in your organisation to receive Marketplace communications, such as new opportunities.
            </p>
            <input
              aria-describedby="contact_name-hint"
              className=""
              id="contact_name"
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_phone"
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_email"
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="domains" />
          <input
            role="button"
            type="submit"
            value="Save and continue" />
        </form>
      </article>
    </div>
  </article>
</div>
`;

exports[`test Signup renders populated Your Info form 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation">
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}>
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}>
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}>
            <span>
              Become a seller
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}>
            <span>
              Create your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}>
            <span>
              Business information
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}>
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/domains"
            onClick={[Function]}>
            <span>
              Digital Services
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/case-study"
            onClick={[Function]}>
            <span>
              Case Study
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}>
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}>
            <span>
              Review your profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}>
            <span>
              Submit
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div
      className="layout">
      <header>
        <h1
          tabIndex="-1">
          Business details
        </h1>
      </header>
      <article
        role="main">
        <form
          action="/documents"
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="representative">
              Authorised Representative
            </label>
            <p
              className="hint"
              id="representative-hint">
              This person must be authorised to enter into contracts on behalf of the business.
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              id="representative"
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="Paul Acron" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="0292000000" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="email@domain.com" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_name">
              Additional contact (optional)
            </label>
            <p
              className="hint"
              id="contact_name-hint">
              You can nominate someone else in your organisation to receive Marketplace communications, such as new opportunities.
            </p>
            <input
              aria-describedby="contact_name-hint"
              className=""
              id="contact_name"
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_phone">
              Phone
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_phone"
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="contact_email">
              Email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="contact_email"
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="domains" />
          <input
            role="button"
            type="submit"
            value="Save and continue" />
        </form>
      </article>
    </div>
  </article>
</div>
`;
